# dorotui

./: .gitignore  README.md  app.py  configuration.py  data.py  doro.py  doro.tcss  pyproject.toml  requirements.txt
screens/: dashboard.py  settings.py  tasks.py  timer.py
styles/: doro.tcss  settings.tcss  styles.tcss  tasks.tcss  timer.tcss
widgets/: doro_timer.py  header.py  timer_config.py
